--- a/elibrary-controller/src/main/resources/templates/users/userUpdate.html
+++ b/elibrary-controller/src/main/resources/templates/users/userUpdate.html
@@ -79,12 +79,24 @@
                     <span class="text-danger" th:errors="*{email}" th:if="${#fields.hasErrors('email')}"></span>
                 </td></tr>
                 <tr><th scope="row">Phone number</th><td>
-                    <label class="form-label visually-hidden" for="phoneNumber">Phone number</label>
-                    <input class="form-control" id="phoneNumber" placeholder="Phone number" th:field="*{phoneNumber}"
-                           th:value="${userDto.phoneNumber}"
-                           type="text">
-                    <span class="text-danger" th:errors="*{phoneNumber}"
-                          th:if="${#fields.hasErrors('phoneNumber')}"></span>
+                    <div th:object="${userDto.phoneNumber}" class="row row-cols-auto">
+                        <div class="col-2">
+                            <label class="form-label visually-hidden" for="countryCode">Code</label>
+                            <input class="form-control" id="countryCode" placeholder="Code" th:field="*{countryCode}"
+                                   th:value="*{countryCode}"
+                                   type="text">
+                            <span class="text-danger" th:errors="*{countryCode}"
+                                  th:if="${#fields.hasErrors('countryCode')}"></span>
+                        </div>
+                        <div class="col-3">
+                            <label class="form-label visually-hidden" for="phoneNumber">Phone</label>
+                            <input class="form-control" id="phoneNumber" placeholder="Phone" th:field="*{nationalNumber}"
+                                   th:value="*{nationalNumber}"
+                                   type="text">
+                            <span class="text-danger" th:errors="*{nationalNumber}"
+                                  th:if="${#fields.hasErrors('nationalNumber')}"></span>
+                        </div>
+                    </div>
                 </td></tr>
                 <tr><th scope="row">Gender</th><td>
                     <div class="form-check form-check-inline">
@@ -115,6 +127,14 @@
                 </td></tr>
                 <tr><th scope="row">Address</th><td>
                     <div th:object="${userDto.addressDto}">
+                        <div class="mb-2">
+                            <label class="form-label" for="country">Country</label>
+                            <input class="form-control" id="country" placeholder="Country" th:field="*{country}"
+                                   th:value="*{country}"
+                                   type="text">
+                            <span class="text-danger" th:errors="*{country}"
+                                  th:if="${#fields.hasErrors('country')}"></span>
+                        </div>
                         <div class="mb-2">
                             <label class="form-label" for="region">Region name</label>
                             <input class="form-control" id="region" placeholder="Region name" th:field="*{region}"
