--- a/elibrary-controller/src/main/resources/templates/subscriptions/subscriptionInfo.html
+++ b/elibrary-controller/src/main/resources/templates/subscriptions/subscriptionInfo.html
@@ -43,15 +43,47 @@
                     <th scope="col">Count</th>
                     <th scope="col">Status</th>
                     <th scope="col">Ret</th>
-                    <th scope="col">Created</th>
-                    <th scope="col">Deadline</th>
+                    <th scope="col">
+                        <div>
+                            <a th:href="@{subscriptions(status=${currentStatusCode}, size=${pageSubscriptionDto.size},
+                               page=${pageSubscriptionDto.getNumber()}, sort='created,ASC')}" class="text-decoration-none">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-short" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4z"></path>
+                                </svg>
+                            </a>
+                            <a th:href="@{subscriptions(status=${currentStatusCode}, size=${pageSubscriptionDto.size},
+                               page=${pageSubscriptionDto.getNumber()}, sort='created,DESC')}" class="text-decoration-none">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-short" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" d="M8 12a.5.5 0 0 0 .5-.5V5.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 5.707V11.5a.5.5 0 0 0 .5.5z"></path>
+                                </svg>
+                            </a>
+                            Created
+                        </div>
+                    </th>
+                    <th scope="col">
+                        <div>
+                        <a th:href="@{subscriptions(status=${currentStatusCode}, size=${pageSubscriptionDto.size},
+                           page=${pageSubscriptionDto.getNumber()}, sort='deadline,ASC')}" class="text-decoration-none">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-short" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4z"></path>
+                            </svg>
+                        </a>
+                            <a th:href="@{subscriptions(status=${currentStatusCode}, size=${pageSubscriptionDto.size},
+                           page=${pageSubscriptionDto.getNumber()}, sort='deadline,DESC')}" class="text-decoration-none">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-short" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" d="M8 12a.5.5 0 0 0 .5-.5V5.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 5.707V11.5a.5.5 0 0 0 .5.5z"></path>
+                                </svg>
+                            </a>
+                        Deadline
+                        </div>
+                    </th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr th:each="subscription : ${pageSubscriptionDto.content}">
                     <th scope="row" th:text="${subscription.id}"></th>
                     <td class="p-1">
-                        <!--/*@thymesVar id="bookDetails" type=""by.it.academy.grodno.elibrary.api.dto.books.BookDto"*/-->
+                        <!--/*@thymesVar id="bookDetails" type="by.it.academy.grodno.elibrary.api.dto.books.BookDto"*/-->
                         <img class="rounded" src="#" th:src="${subscription.bookDetails.pictureUrl}" alt="no picture" width="70"/>
                         <div class="text-md-start">
                             <a class="btn btn-secondary btn-sm mt-2" th:href="'/books/' + ${subscription.bookDetails.id}">More...</a>
@@ -77,19 +109,26 @@
                 </tbody>
             </table>
             <nav aria-label="Page navigation">
+                <div class="text-end">
+                    <a th:href="@{subscriptions(size=5, page=${pageSubscriptionDto.getNumber()}, status=${currentStatusCode}, sort=${pageSubscriptionDto.sort})}">5</a>
+                    <a th:href="@{subscriptions(size=10, page=${pageSubscriptionDto.getNumber()}, status=${currentStatusCode}, sort=${pageSubscriptionDto.sort})}">10</a>
+                    <a th:href="@{subscriptins(size=15, page=${pageSubscriptionDto.getNumber()}, status=${currentStatusCode}, sort=${pageSubscriptionDto.sort})}">15</a>
+                </div>
                 <ul class="pagination">
                     <li th:class="'page-item ' + ${pageSubscriptionDto.getNumber() > 0 ? '' : 'disabled'}">
-                        <a class="page-link" th:href="@{/sbuscriptions(status=${currentStatusCode}, size=${pageSubscriptionDto.size}, page=${pageSubscriptionDto.getNumber() - 1})}">Previous</a></li>
+                        <a class="page-link" th:href="@{/subscriptions(status=${currentStatusCode}, size=${pageSubscriptionDto.size},
+                        page=${pageSubscriptionDto.getNumber() - 1}, sort=${pageSubscriptionDto.sort})}">Previous</a></li>
                     <li class="page-item active"
                         th:if="${pageSubscriptionDto.totalPages > 0}"
                         th:each="pageNumber : ${pageNumbers}"
                         th:class="'page-item' + ${pageNumber == pageSubscriptionDto.number ? ' active' : ''}">
                         <a class="page-link"
-                           th:href="@{/subscriptions(status=${currentStatusCode}, size=${pageSubscriptionDto.size}, page=${pageNumber})}"
-                           th:text="${pageNumber + 1}"></a>
+                           th:href="@{/subscriptions(status=${currentStatusCode}, size=${pageSubscriptionDto.size},
+                           page=${pageNumber}, sort=${pageSubscriptionDto.sort})}" th:text="${pageNumber + 1}"></a>
                     </li>
                     <li th:class="'page-item ' + ${pageSubscriptionDto.getNumber() < pageSubscriptionDto.getTotalPages() - 1 ? '' : 'disabled'}">
-                        <a class="page-link" th:href="@{/sbuscriptions(status=${currentStatusCode}, size=${pageSubscriptionDto.size}, page=${pageSubscriptionDto.getNumber() + 1})}">Next</a></li>
+                        <a class="page-link" th:href="@{/subscriptions(status=${currentStatusCode}, size=${pageSubscriptionDto.size},
+                        page=${pageSubscriptionDto.getNumber() + 1}, sort=${pageSubscriptionDto.sort})}">Next</a></li>
                 </ul>
             </nav>
         </div>
