--- a/elibrary-controller/src/main/resources/templates/admin/adminBooksList.html
+++ b/elibrary-controller/src/main/resources/templates/admin/adminBooksList.html
@@ -92,19 +92,34 @@
             </table>
 
             <nav aria-label="Page navigation">
+                <div class="text-end">
+                    <a th:href="@{books(size=5, page=${pageBookDto.getNumber()}, sort=${pageBookDto.getSort()},
+                    categoryId=${categoryId}, title=${title}, author=${author})}">5</a>
+                    <a th:href="@{books(size=10, page=${pageBookDto.getNumber()}, sort=${pageBookDto.getSort()},
+                    categoryId=${categoryId}, title=${title}, author=${author})}">10</a>
+                    <a th:href="@{books(size=15, page=${pageBookDto.getNumber()}, sort=${pageBookDto.getSort()},
+                    categoryId=${categoryId}, title=${title}, author=${author})}">15</a>
+                </div>
                 <ul class="pagination">
                     <li th:class="'page-item ' + ${pageBookDto.getNumber() > 0 ? '' : 'disabled'}">
-                        <a class="page-link" th:href="@{/books(size=${pageBookDto.size}, page=${pageBookDto.getNumber() - 1})}">Previous</a></li>
+                        <a class="page-link"
+                           th:href="@{books(size=${pageBookDto.size}, page=${pageBookDto.getNumber() - 1}, sort=${pageBookDto.getSort()},
+                           categoryId=${categoryId}, title=${title}, author=${author})}">Previous</a></li>
                     <li class="page-item active"
                         th:if="${pageBookDto.totalPages > 0}"
                         th:each="pageNumber : ${pageNumbers}"
                         th:class="'page-item' + ${pageNumber == pageBookDto.number ? ' active' : ''}">
                         <a class="page-link"
-                           th:href="@{/books(size=${pageBookDto.size}, page=${pageNumber})}"
+                           th:href="@{books(size=${pageBookDto.size}, page=${pageNumber}, sort=${pageBookDto.getSort()},
+                           categoryId=${categoryId}, title=${title}, author=${author})}"
                            th:text="${pageNumber + 1}"></a>
                     </li>
                     <li th:class="'page-item ' + ${pageBookDto.getNumber() < pageBookDto.getTotalPages() - 1 ? '' : 'disabled'}">
-                        <a class="page-link" th:href="@{/books(size=${pageBookDto.size}, page=${pageBookDto.getNumber() + 1})}">Next</a></li>
+                        <a class="page-link"
+                           th:href="@{books(size=${pageBookDto.size},
+                           page=${pageBookDto.getNumber() + 1},
+                           sort=${pageBookDto.getSort()},
+                           categoryId=${categoryId}, title=${title}, author=${author})}">Next</a></li>
                 </ul>
             </nav>
         </div>
